<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="DetailVM"
            type="x.cross.androqr.viewmodels.DetailViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <ImageView
        android:id="@+id/img_person"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="38dp"
        android:contentDescription="@string/a_detail_img_desc"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/et_role"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_but_to_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/a_detail_btn_scanner_desc"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_code_scanner_auto_focus_off" />

    <EditText
        android:id="@+id/et_second_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="none"
        android:focusable="false"
        android:textColor="@color/black"
        android:enabled="false"
        android:text="@{DetailVM.personData.secondName ?? @string/load}"
        app:layout_constraintBottom_toTopOf="@+id/et_parent_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor"
        tools:text="Second Name"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:inputType="none"
        android:textColor="@color/black"
        android:text="@{DetailVM.personData.firstName ?? @string/load}"
        app:layout_constraintBottom_toTopOf="@+id/et_second_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor"
        tools:text="Person Name"/>

    <TextView
        android:id="@+id/tv_parent_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:clickable="false"
        android:text="@string/a_detail_tv_parent_name_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_parent_name"
        app:layout_constraintEnd_toStartOf="@+id/et_parent_name"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/a_detail_tv_parent_name_desc" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/a_detail_tv_name_title"
        android:textSize="20sp"
        app:drawableTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/et_name"
        app:layout_constraintEnd_toStartOf="@+id/et_name"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/a_detail_tv_name_desc"/>

    <EditText
        android:id="@+id/et_parent_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:inputType="none"
        android:textColor="@color/black"
        android:text="@{DetailVM.personData.threeName ?? @string/load}"
        app:layout_constraintBottom_toTopOf="@+id/rv_extra"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor"
        tools:text="Person Name"/>

    <TextView
        android:id="@+id/tv_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:clickable="false"
        android:text="@string/a_detail_tv_second_name_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_second_name"
        app:layout_constraintEnd_toStartOf="@+id/et_second_name"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/a_detail_tv_second_name_desc"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_extra"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        tools:listitem="@layout/rv_item_extra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/a_detail_tv_role_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_role"
        app:layout_constraintEnd_toStartOf="@+id/et_role"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_role"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:inputType="none"
        android:textColor="@color/black"
        android:text="@{DetailVM.personData.role.name ?? @string/load}"
        app:layout_constraintBottom_toTopOf="@+id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor"
        tools:text="Person Role"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>